build_fix.log
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeCatalogActivity.java:123: error: cannot find symbol
        String token = SharedPrefManager.getInstance(this).getAuthToken();
                                                          ^
  symbol:   method getAuthToken()
  location: class SharedPrefManager
D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:138: error: cannot find symbol
        String token = SharedPrefManager.getInstance(this).getAuthToken();
                                                          ^
  symbol:   method getAuthToken()
  location: class SharedPrefManager
D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:207: error: cannot find symbol
        tvDetailEngine.setText(bike.getEngineCc() != null ? bike.getEngineCc() : "-");
                                   ^
  symbol:   method getEngineCc()
  location: variable bike of type BikeModel
D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:207: error: cannot find symbol
        tvDetailEngine.setText(bike.getEngineCc() != null ? bike.getEngineCc() : "-");
                                                                ^
  symbol:   method getEngineCc()
  location: variable bike of type BikeModel
D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:213: error: cannot find symbol
        tvEngineValue.setText(bike.getEngineCc() != null ? bike.getEngineCc() : "-");
                                  ^
  symbol:   method getEngineCc()
  location: variable bike of type BikeModel
D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:213: error: cannot find symbol
        tvEngineValue.setText(bike.getEngineCc() != null ? bike.getEngineCc() : "-");
                                                               ^
  symbol:   method getEngineCc()
  location: variable bike of type BikeModel
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors

[Incubating] Problems report is available at: file:///D:/motovista_deep/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeCatalogActivity.java:123: error: cannot find symbol
          String token = SharedPrefManager.getInstance(this).getAuthToken();
                                                            ^
    symbol:   method getAuthToken()
    location: class SharedPrefManager
  D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:138: error: cannot find symbol
          String token = SharedPrefManager.getInstance(this).getAuthToken();
                                                            ^
    symbol:   method getAuthToken()
    location: class SharedPrefManager
  D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:207: error: cannot find symbol
          tvDetailEngine.setText(bike.getEngineCc() != null ? bike.getEngineCc() : "-");
                                     ^
    symbol:   method getEngineCc()
    location: variable bike of type BikeModel
  D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:207: error: cannot find symbol
          tvDetailEngine.setText(bike.getEngineCc() != null ? bike.getEngineCc() : "-");
                                                                  ^
    symbol:   method getEngineCc()
    location: variable bike of type BikeModel
  D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:213: error: cannot find symbol
          tvEngineValue.setText(bike.getEngineCc() != null ? bike.getEngineCc() : "-");
                                    ^
    symbol:   method getEngineCc()
    location: variable bike of type BikeModel
  D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsScreenActivity.java:213: error: cannot find symbol
          tvEngineValue.setText(bike.getEngineCc() != null ? bike.getEngineCc() : "-");
                                                                 ^
    symbol:   method getEngineCc()
    location: variable bike of type BikeModel
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 2s
17 actionable tasks: 1 executed, 16 up-to-date
